Update YUI from 2.2.1 to 2.4.1
*** Please check your apps for incompatibilities as there have been
*** many changes between these YUI versions.

git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4890 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/main.css
+++ b/share/web/static/css/main.css
@@ -9,6 +9,8 @@
 @import "halos.css";
 @import "app.css";
 @import "autocomplete.css";
+@import "yui/calendar/calendar-core.css";
 @import "yui/calendar/calendar.css";
+@import "yui/menu/menu-core.css";
 @import "yui/menu/menu.css";
 @import "notices.css";
