* Deployment manual updates from Stanislav Sinyagin <ssinyagin@yahoo.com>
* Possibly making region inclusion display-neutral

* We somehow had dropped caching headers when we compressed css and js.

git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4894 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/base.css
+++ b/share/web/static/css/base.css
@@ -60,6 +60,10 @@ div#jifty-wait-message {
     float: right;
 }
 
+div#jifty-region, div#jifty-region-lazy {
+    display: inline;
+}
+
 
 
 div.warning {
