Now each halo has a proper header. You can now toggle between rendered output and HTML source. It's ugly as sin, but it works. Other misc cleanups.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4913 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -1,3 +1,15 @@
+.halo {
+}
+
+.halo_header {
+    display: none;
+    border-bottom: 1px dotted #666666;
+}
+
+.halo_source {
+    font-family: monospace;
+}
+
 .halo_actions {
     position: fixed;
     border: 1px solid black;
