--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -1,9 +1,18 @@
 .halo {
+    border-color: #ffd700;
+    border-style: solid;
+    border-width: 0;
+    margin: 0;
 }
 
 .halo_header {
     display: none;
-    border-bottom: 1px dotted #666666;
+    border-bottom: 1px dashed #ffd700;
+    background: #fff;
+}
+
+.halo_rendermode {
+    float: right;
 }
 
 .halo_source {
@@ -108,7 +117,7 @@
 
 #render_info {
     position: fixed;
-    right:0.5em;
+    right:.5em;
     bottom:0;
 }
 
