Add some support for dumping the Perl code of templates. For now, only for TD. And DDS is currently giving us a lot of extraneous bits (oh well)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4916 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -15,8 +15,12 @@
     float: right;
 }
 
-.halo_source {
+.halo_source, .halo_perl {
     font-family: monospace;
+}
+
+.halo_perl {
+    display: none;
 }
 
 .halo_actions {
