Halo refactor to allow arbitrary plugins to add their data to be displayed
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4971 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -5,22 +5,18 @@
     margin: 0;
 }
 
-.halo_header {
+.halo-header {
     display: none;
     border-bottom: 1px dashed #ffd700;
     background: #fff;
 }
 
-.halo_rendermode {
+.halo-rendermode {
     float: right;
 }
 
-.halo_source, .halo_perl {
+.halo-source {
     font-family: monospace;
-}
-
-.halo_perl {
-    display: none;
 }
 
 .halo_actions {
