--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -3,12 +3,14 @@
     border-style: solid;
     border-width: 0;
     margin: 0;
+    padding: 0;
 }
 
 .halo-header {
     display: none;
     border-bottom: 1px dashed #ffd700;
     background: #fff;
+    margin: 3px;
 }
 
 .halo-rendermode {
