Halos now display arguments
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4980 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -21,6 +21,18 @@
     font-family: monospace;
 }
 
+.halo-argument {
+    position: absolute;
+    left: 200px;
+    border: 1px solid black;
+    background: #ccc;
+    padding: 1em;
+    padding-top: 0;
+    width: 300px;
+    height: 500px;
+    overflow: auto;
+}
+
 .halo_actions {
     position: fixed;
     border: 1px solid black;
