Style changes, flip between "draw halos" and "hide halos"
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4981 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -8,7 +8,7 @@
 
 .halo-header {
     display: none;
-    border-bottom: 1px dashed #ffd700;
+    border-bottom: 1px solid #ffd700;
     background: #fff;
     margin: 3px;
 }
