Fixing the extra border that shows up under autocompleters.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5331 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/autocomplete.css
+++ b/share/web/static/css/autocomplete.css
@@ -1,9 +1,12 @@
 /* Autocomplete */
 
-.autocomplete {
+#autocompleteHelper {
     border: 1px solid #666;
     background: white;
     z-index: 43;
+}
+
+.autocomplete {
 }
 
 .autocomplete ul {
