link to specific page within documentation using something like /__jifty/online_docs/?n=Jifty::Manual
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5519 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/OnlineDocs/web/templates/__jifty/online_docs/index.html
+++ b/share/plugins/Jifty/Plugin/OnlineDocs/web/templates/__jifty/online_docs/index.html
@@ -10,7 +10,7 @@ a:focus { background: #99ff99; border: 1px black dotted }
 --></style>
 </head>
 <FRAMESET COLS="*, 250">
-    <FRAME src="content.html" name="podcontent">
+    <FRAME src="content.html<% $n ? "?n=$n" : "" %>" name="podcontent">
     <FRAME src="toc.html" name="podtoc">
     <NOFRAMES>
         <a style="display: none" href="#toc"><%_('Table of Contents')%></a>
