--- a/share/web/static/css/notices.css
+++ b/share/web/static/css/notices.css
@@ -37,24 +37,13 @@ div#messages,  div#errors {
     text-indent: -9999em;
 }
 
-#jifty-result-popup {
-    bottom: 0.6em;
-    position: fixed;
-    right: 0;
-    width: 180px;
-    z-index: 43;
+#jGrowl .result-message .message {
+    background: url(/static/images/silk/information.png) no-repeat center left;
+    padding-left: 20px;
 }
 
-#jifty-result-popup .popup_notification {
-     background: #A9B7FF url(/static/images/silk/information.png) no-repeat scroll 5px center;
-     border: 1px solid #004E75;
-     overflow: hidden;
-     padding: 0.5em 0.5em 0.5em 27px;
-}
-
-#jifty-result-popup .result-error {
-    background: #FFA8A8 url(/static/images/silk/error.png) no-repeat scroll 5px center;
-    border: 1px solid #B71111;
-    color: #B71111;
+#jGrowl .result-error .message {
+    background: url(/static/images/silk/error.png) no-repeat center left;
+    padding-left: 20px;
 }
 
