* Updates to Ping to make it work with current code
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5571 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/examples/Ping/share/web/templates/index.html
+++ b/examples/Ping/share/web/templates/index.html
@@ -7,7 +7,7 @@
 <table width="80%"><tr valign="top"><td>
 <fieldset>
 <legend>New Pings</legend>
-% my $form = Jifty->web->form->new(name => 'new');
+% my $form = Jifty->web->form;
 <% $form->start %>
 <% $action->form_field('host') %>
 <% $action->form_field('only_failure')%>
@@ -22,7 +22,7 @@
 <legend>Current Pings</legend>
 <table width="100%">
 % foreach my $sub (@subs) {
-% $form = Jifty->web->form->new(name => $sub);
+% $form = Jifty->web->form;
 <% $form->start %>
 %    my $del = Jifty->web->new_action(class => 'CancelPing', arguments => { host => $sub });
 <tr><td>
@@ -37,7 +37,6 @@
 </fieldset>
 % }
 </td></tr></table>
-<script>new Jifty.Subs({}).start();</script>
 </&>
 
 <%init>
