Set a default color for the SimpleBars chart renderer
Add a Google charts renderer to the Chart plugin

Some type updates

git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5576 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/Chart/web/static/css/simple_bars.css
+++ b/share/plugins/Jifty/Plugin/Chart/web/static/css/simple_bars.css
@@ -23,6 +23,10 @@ div.simple_bars div.row span.barArea span.bar {
     display: block;
 }
 
+div.simple_bars span.bar {
+    background-color: #4d89f9;
+}
+
 div.simple_bars div.row span.value {
     display: block;
     float: left;
