* Anything which declares itself to be a label is good enough, not just <label>s
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5906 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -206,7 +206,7 @@ input.placeholder, textarea.placeholder {
     color: #666;
 }
 
-form div.mandatory label {
+form div.mandatory .label {
     font-weight: bold;
 }
 
