Remove the javascript wrappers for the test regions, they're just noise
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5953 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/TestApp-Regions/share/web/templates/mason.html
+++ b/t/TestApp-Regions/share/web/templates/mason.html
@@ -2,5 +2,6 @@
     <% Jifty->web->region(
         name => 'mason2',
         path => '/mason2.html',
+        region_wrapper => 0,
     ) %>
 </div>
