* Use Behavior to change full-page action messages into sticky jGrowl messages
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@5955 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/notices.css
+++ b/share/web/static/css/notices.css
@@ -42,6 +42,10 @@ div#messages,  div#errors {
     padding-left: 20px;
 }
 
+#jGrowl .result-error { 
+    background: #a00000;
+}
+
 #jGrowl .result-error .message {
     background: url(/static/images/silk/error.png) no-repeat center left;
     padding-left: 20px;
