* Make the default "Loading..." suck less
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6084 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/base.css
+++ b/share/web/static/css/base.css
@@ -50,14 +50,16 @@ div.spacer {
 .prev-page { padding-left: 1em; }
 
 div#jifty-wait-message {
-    color: red;
-    background: black;
-    font-size: 2em;
-    position: fixed;
-    top: 10px;
-    right: 10px;
+    background: #fff url(/images/css/spinner.gif) no-repeat scroll center center;
+    position:fixed;
+    top: 5px;
+    right: 5px;
+    height: 24px;
+    width: 24px;
+    padding: 5px;
+    text-indent: 10em;
     z-index: 42;
-    float: right;
+    -moz-border-radius: 15px;
 }
 
 div#jifty-region, div#jifty-region-lazy {
