--- a/share/web/static/css/jquery.jgrowl.css
+++ b/share/web/static/css/jquery.jgrowl.css
@@ -31,7 +31,7 @@ div.ie6.bottom-left {
 	top: 				expression( ( 0 - jGrowl.offsetHeight + ( document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop ) ) + 'px' );
 }
 
-div.id6.center {
+div.ie6.center {
 	left: 				expression( ( 0 + ( ignoreMe2 = document.documentElement.scrollLeft ? document.documentElement.scrollLeft : document.body.scrollLeft ) ) + 'px' );
 	top: 				expression( ( 0 + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop ) ) + 'px' );
 	width: 				100%;
@@ -93,7 +93,7 @@ div.jGrowl div.jGrowl-notification, div.jGrowl div.jGrowl-closer {
 }
 
 div.jGrowl div.jGrowl-notification {
-	height: 				40px;
+	min-height: 			40px;
 }
 
 div.jGrowl div.jGrowl-notification div.header {
