add time picker to jifty
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6704 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/main.css
+++ b/share/web/static/css/main.css
@@ -15,3 +15,5 @@
 @import "yui/menu/menu.css";
 @import "notices.css";
 @import "jquery.jgrowl.css";
+@import "jquery.timepickr.css";
+@import "time.css";
