add restart functionality for Config plugin
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6911 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/index.html
+++ b/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/index.html
@@ -6,7 +6,7 @@
 % for my $field ( @fields ) {
 <% $action->form_field($field) %>
 % }
-<% Jifty->web->form->submit( label => 'Save' ) %>
+<% Jifty->web->form->submit( label => _('Save and restart server') ) %>
 <% Jifty->web->form->end %>
 
 </&>
