add wait_seconds class attribute for config plugin
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6923 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/restart.html
+++ b/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/restart.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 <title><% _('restarting' ) %></title>
-<meta http-equiv="refresh" content="5;url=<% Jifty::Plugin::Config->after_restart_url %>" />
+<meta http-equiv="refresh" content="<% $seconds %>;url=<% $url %>" />
 </head>
 <body>
-<h1>please wait for 5 seconds so the server can restart</h1>
+<h1>please wait for <% $seconds %> seconds so the server can restart,
+    then we'll redirect to <a href="<% $url %>">here</a></h1>
 </body>
 </html>
 % Jifty->handler->buffer->flush_output();
 % $Jifty::SERVER->restart;
+
+<%init>
+my $seconds = Jifty::Plugin::Config->wait_seconds;
+my $url = Jifty::Plugin::Config->after_restart_url;
+</%init>
