make the whole content of config.yml as atextarea so we can config everything
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6924 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/index.html
+++ b/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/index.html
@@ -3,9 +3,7 @@
 <h1><% _('Configuration') %></h1>
 
 <% Jifty->web->form->start %>
-% for my $field ( @fields ) {
-<% $action->form_field($field) %>
-% }
+<% $action->form_field('etc/config.yml') %>
 <% Jifty->web->form->submit( label => _('Save and restart server') ) %>
 <% Jifty->web->form->end %>
 
@@ -14,7 +12,5 @@
 <%init>
 my $action = Jifty->web->new_action( class =>
 'Jifty::Plugin::Config::Action::Config' );
-my @fields = qw/database_type database_name database_host 
-database_user database_password/;
 </%init>
 
