--- a/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/restart.html
+++ b/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/restart.html
@@ -15,4 +15,5 @@
 <%init>
 my $seconds = Jifty::Plugin::Config->wait_seconds;
 my $url = Jifty::Plugin::Config->after_restart_url;
+$url = Jifty->config->framework('Web')->{BaseURL} . ':' .  Jifty->config->framework('Web')->{Port} . $url unless $url =~ /^https?:/;
 </%init>
