fix Config plugin: seems arguments do *not* like \W chars
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6932 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/index.html
+++ b/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/index.html
@@ -3,7 +3,7 @@
 <h1><% _('Configuration') %></h1>
 
 <% Jifty->web->form->start %>
-<% $action->form_field('etc/config.yml') %>
+<% $action->form_field('config') %>
 <% Jifty->web->form->submit( label => _('Save and restart server') ) %>
 <% Jifty->web->form->end %>
 
