let restart.html accepts seconds and url arguments
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6934 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/restart.html
+++ b/share/plugins/Jifty/Plugin/Config/web/templates/__jifty/config/restart.html
@@ -13,7 +13,12 @@
 % $Jifty::SERVER->restart;
 
 <%init>
-my $seconds = Jifty::Plugin::Config->wait_seconds;
-my $url = Jifty::Plugin::Config->after_restart_url;
+$seconds ||= Jifty::Plugin::Config->wait_seconds;
+$url ||= Jifty::Plugin::Config->after_restart_url;
 $url = Jifty->config->framework('Web')->{BaseURL} . ':' .  Jifty->config->framework('Web')->{Port} . $url unless $url =~ /^https?:/;
 </%init>
+
+<%args>
+$seconds => undef
+$url => undef
+</%args>
